Don't clear the observer list in KeyboardController::DisableKeyboard().

It's hard for observers of KeyboardController to watch EnableKeyboard()
calling and re-add themselves to the observer list.

Bug: 848249
Test: keyboard_unittests
Change-Id: I18cf2cb6c2099ed82b105a463093cac0cda8dfcf
Reviewed-on: https://chromium-review.googlesource.com/1080670
Reviewed-by: Darren Shen <shend@chromium.org>
Commit-Queue: Yuichiro Hanada <yhanada@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563450}
Former-commit-id: b120be1195044c8be06578bdec47c93e5f3011f0